// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip selectable chips should allow for a custom selectedIcon 1`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should allow for a custom selectedIcon 2`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--left-addon"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon rmd-chip__icon--visible"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should allow for a custom selectedIcon 3`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  Text
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should allow for a custom selectedIcon 4`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--left-addon"
  type="button"
>
  Text
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should allow for a custom selectedIcon 5`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should allow for a custom selectedIcon 6`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--right-addon"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the hidden attribute if the disableIconTransition prop is enabled 1`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the hidden attribute if the disableIconTransition prop is enabled 2`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--themed rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the hidden attribute if the disableIconTransition prop is enabled 3`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the hidden attribute if the disableIconTransition prop is enabled 4`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--themed rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 1`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon"
  >
    check
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 2`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--left-addon"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon rmd-chip__icon--visible"
  >
    check
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 3`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 4`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--left-addon"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 5`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-chip--left-addon"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon"
  >
    check
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 6`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--surrounded"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon rmd-chip__icon--visible"
  >
    check
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 7`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-chip--right-addon"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon"
  >
    check
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 8`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--surrounded"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons rmd-chip__icon rmd-chip__icon--visible"
  >
    check
  </i>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 9`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip selectable chips should apply the selected icon when the selectedThemed prop is not true 10`] = `
<button
  aria-pressed="true"
  class="rmd-chip rmd-chip--selected rmd-chip--solid rmd-chip--right-addon"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should allow for addons to appear before and after the children 1`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-chip--surrounded"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </i>
  <span
    class="rmd-chip__content"
  >
    Content
  </span>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    close
  </i>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<button
  class="rmd-chip rmd-chip--solid"
  style="color: white;"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-chip--disabled"
  disabled=""
  style=""
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<button
  class="rmd-chip rmd-chip--outline"
  style=""
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<button
  class="rmd-chip rmd-chip--outline rmd-chip--disabled"
  disabled=""
  style=""
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should apply the pressed class name while raisable 1`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-chip--pressed rmd-pressed"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should apply the pressed class name while raisable 2`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should apply the pressed class name while raisable 3`] = `
<button
  class="rmd-chip rmd-chip--solid rmd-pressed"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should apply the pressed class name while raisable 4`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should render as a span when the noninteractive prop is enabled 1`] = `
<span
  class="rmd-chip rmd-chip--solid rmd-chip--noninteractive"
  data-testid="chip"
>
  <span
    class="rmd-chip__content"
  >
    Content
  </span>
  <span
    class="rmd-ripple-container"
  />
</span>
`;

exports[`Chip should render as a span when the noninteractive prop is enabled 2`] = `
<button
  class="rmd-chip rmd-chip--solid"
  data-testid="chip"
  type="button"
>
  <span
    class="rmd-chip__content"
  >
    Content
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should wrap the children in an additional span unless the disableContentWrap prop is enabled 1`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    class="rmd-chip__content content-class-name custom-class-name"
    style="color: red;"
  >
    Content
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Chip should wrap the children in an additional span unless the disableContentWrap prop is enabled 2`] = `
<button
  class="rmd-chip rmd-chip--solid"
  type="button"
>
  <span
    style=""
  >
    Content
  </span>
  <span
    class="rmd-ripple-container"
  />
</button>
`;
